--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Aula De Programação Mobile</title>	
+    <title>Aula de Programação Mobile</title>	
 	<style>
 		p{
 			text-align:center;
-			font-size: 25px;
+			font-size: 30px;
 		}
 		
 		label{
@@ -23,14 +23,14 @@
         Aula de Git e Github
     </h1></center>
 	<hr>
-	<p>Cadastro de Aluno</p>
+	<p>Cadastro dos Aluno</p>
 
 <center><form action ="enviar.php" method="posto">
 <label for="tNome">
  Nome:
 </label>
 </br>
-<input type="text" name="txtNome" it="tNome" size"="100" maxlength="100" placeholder="Digite o Nome" required>
+<input type="text" name="txtNome" it="tNome" size"="150" maxlength="200" placeholder="Digite o seu Nome" required>
 <input type="submit" value="Confirmar"></center>
 				      <input type="reset" value="Cancelar"></center>
 
