--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 <input type="text" name="txtNome" it="tNome" size"="150" maxlength="200" placeholder="Digite o seu Nome" required>
 <input type="submit" value="Confirmar"></center>
 				      <input type="reset" value="Cancelar"></center>
+									  <button>Cadastro de Cliente</button>
 
 </br>
 </br>
