--- a/bot+Áes.html
+++ b/bot+Áes.html
@@ -12,4 +12,6 @@
   <button type="button" class="btn btn-link">Link</button>   
   <button type="button" class="btn btn-link">Fale Conosco</button> 
   <button type="button" class="btn btn-link">Teste Hack </button>
+  <button type="button" class="btn btn-link">Home</button>
+   <button type="button" class="btn btn-link">Hacktoberfest</button>
 </div>
