--- a/bot+Áes.html
+++ b/bot+Áes.html
@@ -16,4 +16,5 @@
    <button type="button" class="btn btn-link">Hacktoberfest</button>
   <button type="button" class="btn btn-link">Olá Mundo!</button>
   <button type="button" class="btn btn-link">Olá... !</button>
+  <button type="button" class="btn btn-link">Entre em Contato!</button>
 </div>
