--- a/bot+Áes.html
+++ b/bot+Áes.html
@@ -17,4 +17,5 @@
   <button type="button" class="btn btn-link">Olá Mundo!</button>
   <button type="button" class="btn btn-link">Olá... !</button>
   <button type="button" class="btn btn-link">Entre em Contato!</button>
+  <button type="button" class="btn btn-link">Aceitar</button>
 </div>
