--- a/bot+Áes.html
+++ b/bot+Áes.html
@@ -18,5 +18,5 @@
   <button type="button" class="btn btn-link">Olá... !</button>
   <button type="button" class="btn btn-link">Entre em Contato!</button>
   <button type="button" class="btn btn-link">Aceitar</button>
-  <button type="button" class="btn btn-link">Erro</button>
+  <button type="button" class="btn btn-link">Olá mundo</button>
 </div>
