--- a/bot+Áes.html
+++ b/bot+Áes.html
@@ -19,4 +19,6 @@
   <button type="button" class="btn btn-link">Entre em Contato!</button>
   <button type="button" class="btn btn-link">Aceitar</button>
   <button type="button" class="btn btn-link">Erro</button>
+  button type="button" class="btn btn-link">Erro</button>
+  
 </div>
