--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <input type="submit" value="Confirmar"></center>
 				      <input type="reset" value="Cancelar"></center>
 									  <button>Cadastro de Cliente</button>
-
+button type="button" class="btn btn-link">Erro</button>
 </br>
 </br>
 </body>
