--- a/bot+Áes.html
+++ b/bot+Áes.html
@@ -20,4 +20,6 @@
   <button type="button" class="btn btn-link">Aceitar</button>
   <button type="button" class="btn btn-link">Erro</button>
   <button type="button" class="btn btn-link">Fale Conosco</button>
+   <button type="button" class="btn btn-link">Hacktoberfest</button>
+  <button type="button" class="btn btn-link">Teste</button>
 </div>
