--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,8 @@
 <html>
   <p>FIM<</p>
 Hello Word
+utton type="button" class="btn btn-link">Olá Mundo!</button>
+  <button type="button" class="btn btn-link">Olá... !</button>
+  <button type="button" class="btn btn-link">Entre em Contato!</button>
+  <button type="button" class="btn btn-link">Aceitar</button>
 </html>
