--- a/navbar.html
+++ b/navbar.html
@@ -4,6 +4,14 @@ Hello Word!
 hello word 
   
   Olá Mundo
-
+<center><form action ="enviar.php" method="posto">
+<label for="tNome">
+ Nome:
+</label>
+</br>
+<input type="text" name="txtNome" it="tNome" size"="150" maxlength="200" placeholder="Digite o seu Nome" required>
+<input type="submit" value="Confirmar"></center>
+				      <input type="reset" value="Cancelar"></center>
+									  <button>Cadastro de Cliente</button>
 
 </html>
