--- a/bot+Áes.html
+++ b/bot+Áes.html
@@ -34,6 +34,7 @@
    <button type="button" class="btn btn-link">Hacktoberfest</button>
   <button type="button" class="btn btn-link">Teste</button>
   <button type="button" class="btn btn-link">Olá Mundo</button>
+   <button type="button" class="btn btn-link">Hello Word</button>
 
 
 
