--- a/bot+Áes.html
+++ b/bot+Áes.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Estilos de botão para se usar</h2>
+  <h2>Estilos de botão para se usar no html</h2>
   <button type="button" class="btn">Básico</button>
   <button type="button" class="btn btn-primary">Primário</button>
   <button type="button" class="btn btn-secondary">Secundário</button>
